--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Password encryption with BCrypt -->
+		<dependency>
+			<groupId>de.svenkubiak</groupId>
+			<artifactId>jBCrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
 		<!-- Hibernate & JPA -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
